# sidequest-daemon

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  cameras.yaml  pyproject.toml  recipes.yaml
docs/: training.md
sidequest_daemon/: config.py  scene_interpreter.py  types.py
sidequest_daemon/audio/: interpreter.py  library_backend.py  mixer.py  models.py  musicgen_backend.py  protocol.py  queue.py  rotator.py
sidequest_daemon/genre/: models.py
sidequest_daemon/media/: ace_step_adapter.py  cache.py  camera_specs.py  catalogs.py  daemon.py  daemon_client.py  flux_config.py  gpu_detect.py  music_pipeline.py  pipeline_factory.py  post_processor.py  preview.py  prompt_composer.py  protocol.py  r2_writer.py  recipe_loader.py  recipes.py  renderer.py  renderer_factory.py  subject_extractor.py  worker.py  zimage_config.py
sidequest_daemon/ml/: memory_manager.py
tests/: conftest.py  test_ace_step_adapter.py  test_camera_specs.py  test_catalogs.py  test_compose_error_replies.py  test_composer.py  test_composer_wiring.py  test_daemon_smoke.py  test_daemon_socket_lifecycle.py  test_embed_endpoint_story_37_5.py  test_embed_handler_wiring.py  test_embed_story_15_7.py  test_flux_mlx_worker.py  test_flux_mlx_worker_matched_keys.py  test_flux_mlx_worker_multilora.py  test_heartbeat_emit.py  test_landscape_environmental_routing.py  test_lora_loading_story_27_5.py  test_music_dispatch.py  test_music_pipeline.py  test_music_pipeline_integration.py  test_otel_spans.py  test_pipeline_factory_music.py  test_post_processor.py  test_preview_cli.py  test_preview_style.py  test_r2_writer_pack_asset.py  test_recipe_loader.py  test_recipes_types.py  test_scene_interpreter_skip_on_server_visual.py  test_span_scope_per_call_45_29.py  test_split_render_embed_locks_story_37_23.py  test_stage_cue_camera.py  test_watcher_bridge.py  test_zimage_config.py  test_zimage_high_fidelity_tier.py  test_zimage_mlx_worker.py  test_zimage_renderer_wiring.py  test_zimage_worker_fidelity.py
(+66 files in other folders)
