[project]
name = "sidequest-daemon"
version = "0.1.0"
description = "SideQuest media services — image generation, TTS, and audio playback"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "torch>=2.0",
    "diffusers>=0.30",
    "accelerate>=0.30",
    "transformers>=4.40",
    "safetensors>=0.4",
    "pygame-ce>=2.5",
    "numpy>=1.24",
    "piper-tts>=1.2",
    "pedalboard>=0.9",
    "scipy>=1.11",
    "sounddevice>=0.4",
    "pyyaml>=6.0",
    "aiohttp>=3.9",
]

[project.scripts]
sidequest-renderer = "sidequest_daemon.media.daemon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
