[project]
name = "sidequest-daemon"
version = "0.1.0"
description = "SideQuest media services — image generation and audio playback"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "mlx>=0.18",
    "mflux>=0.17.5",
    "transformers>=4.40",
    "safetensors>=0.4",
    "pygame-ce>=2.5",
    "numpy>=1.24",
    "pedalboard>=0.9",
    "scipy>=1.11",
    "sounddevice>=0.4",
    "pyyaml>=6.0",
    "aiohttp>=3.9",
    "opentelemetry-api>=1.20",
    "sentence-transformers>=2.2",
    "boto3>=1.34",
]

[project.scripts]
sidequest-renderer = "sidequest_daemon.media.daemon:main"
sidequest-train = "sidequest_daemon.training.cli:main"
sidequest-promptpreview = "sidequest_daemon.media.preview:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]
training = [
    "mlx-lm>=0.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
